api initial commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<a href="#team">My Team</a>
 						</li>
 						<li>
-							<a href="#account">Account</a>
+							<a href="#example">Account</a>
 						</li>
 						<li>
 							<a href="#signout">Sign Out</a>
