--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" type="text/css" href="css/sweet-alert.css">	
 	<script src="css/sweet-alert.js"></script>
 
-
 	<script data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 
 </head>
@@ -19,12 +18,12 @@
 		<div class="nav-main">
 			<div class="wrap">
 				<div class="nav-home">
-					<p>Team Track 2</p>
+					<a href="#">Team Track 2</a>
 				</div>
 				<div class="nav-site">
 					<ul>
 						<li>
-							<a href="#team">My Team</a>
+							<a href="#team">Runners</a>
 						</li>
 						<li>
 							<a href="#example">Account</a>
