create runner initial commit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 							<a href="#team">Runners</a>
 						</li>
 						<li>
+							<a href="#createrunner">Create Runner</a>
+						</li>
+						<li>
 							<a href="#example">Account</a>
 						</li>
 						<li>
