jumbotron added to home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="nav-main">
 			<div class="wrap">
 				<div class="nav-home">
-					<a href="#">Team Track 2</a>
+					<a href="#home">Team Track 2</a>
 				</div>
 				<div class="nav-site">
 					<ul>
@@ -41,6 +41,7 @@
 						</li>
 					</ul>
 				</div>
+
 			</div>
 		</div>
 
