api helpers, table css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<title>Team Track</title>
 	
-	<!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -20,7 +19,7 @@
 		<div class="nav-main">
 			<div class="wrap">
 				<div class="nav-home">
-					<a href="#home">Team Track 2</a>
+					<a href="#home">TeamTrack</a>
 				</div>
 				<div class="nav-site">
 					<ul>
@@ -58,7 +57,6 @@
 </body>
 
 <footer>
-	
 
 </footer>
 
