button groups added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 				<div class="nav-site">
 					<ul>
 						<li>
-							<a href="#runnerslist">Browse All Runners</a>
+							<a href="#runnerslist">Browse all runners</a>
+						</li>
+						<li>
+							<a href="#myteams">My Teams</a>
 						</li>
 						<!--
 						<li>
@@ -33,13 +36,14 @@
 						<li>
 							<a href="#createteam">Create Team</a>
 						</li>
-						-->
+						
 						<li>
 							<a href="#example">Account</a>
 						</li>
 						<li>
 							<a href="#signout">Sign Out</a>
 						</li>
+						-->
 					</ul>
 				</div>
 
@@ -52,12 +56,10 @@
 				</div>
 			</div>
 		</div>
+
 		<div id="bufferDiv"></div>
+
 		<div id="mainContent"></div>
-		
-		<div id="page">
-			<div id="example"></div>
-		</div>
 		
 		<div id="footer"></div>
 	</div> 
