minor css changes

--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 				<div class="nav-site">
 					<ul>
 						<li>
+							<a href="#createrunner">Create a team</a>
+						</li>
+						<li>
 							<a href="#runnerslist">Browse all runners</a>
 						</li>
 						<li>
 							<a href="#myteams">My Teams</a>
 						</li>
+
 						<!--
 						<li>
 							<a href="#createrunner">Create Runner</a>
