--- a/sandbox.html
+++ b/sandbox.html
@@ -6,9 +6,9 @@
   <title>Team Track</title>
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/sweet-alert.css">  
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="css/sweet-alert.js"></script>
 
   <script data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
@@ -16,11 +16,9 @@
 </head>
 <body>
 
-
-<nav class="navbar navbar-default" style="margin-bottom:0px;">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-wrap">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -69,19 +67,8 @@
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
-</div><!-- .navbar-wrap -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<div class="promo">
-	<div class="navbar-wrap">
-		<div class="my-jumbotron">
-    		<h1>TeamTrack</h1>
-    		<p>Follow your team.</p>
-    	</div>
-	</div>
-</div>
-
 
 <div id="bufferDiv"></div>
 
