--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/sweet-alert.css">  
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
+  <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">-->
   <script src="css/sweet-alert.js"></script>
 
   <script data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 
 </head>
 <body>
-
 
 <nav class="navbar navbar-default" style="margin-bottom:0px;">
   <div class="container-fluid">
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">TeamTrack</a>
+      <a class="navbar-brand" href="#home">TeamTrack</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,17 +73,15 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="promo">
+<!-- <div class="promo">
 	<div class="navbar-wrap">
 		<div class="my-jumbotron">
     		<h1>TeamTrack</h1>
     		<p>Follow your team.</p>
+    		<button class="btn btn-primary" href="#createrunner">Let's get started</button>
     	</div>
 	</div>
-</div>
-
-
-<div id="bufferDiv"></div>
+</div> -->
 
 <div id="mainContent"></div>
 
