--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="#myteams">Upcoming Races</a></li>
         <li><a href="#myteams">My Teams</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
