--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#teambuilder">Team Builder</a></li>
         <li><a href="#myteams">My Teams</a></li>
+        <li><a href="#runnerslist">Browse Runners</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
