--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#teambuilder">Team Builder</a></li>
-        <li><a href="#myteams">Team Manager</a></li>
+        <li><a href="#teammanager">Team Manager</a></li>
         <li><a href="#runnerslist">Browse My Runners</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
